--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src= "assets/javascript/game.js"></script>
 
-    <title>Psychic Game</span></title>
+    <title>Psychic Game</title>
 </head>
 <body>
     <div class="jumbotron big-banner text-light font-italic">
